lash/tests/ui/model_selection_requires_variant.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
 --> tests/ui/model_selection_requires_variant.rs:2:40
  |
2 |     let _ = lash::LashCore::standard().model("model-only");
  |                                        ^^^^^-------------- argument #2 of type `Option<String>` is missing
  |
note: method defined here
 --> src/core.rs
  |
  |     pub fn model(mut self, model: impl Into<String>, variant: Option<String>) -> Self {
  |            ^^^^^
help: provide the argument
  |
2 |     let _ = lash::LashCore::standard().model("model-only", /* Option<String> */);
  |                                                          ++++++++++++++++++++++

error[E0599]: no method named `model_variant` found for struct `LashCoreBuilder` in the current scope
 --> tests/ui/model_selection_requires_variant.rs:3:40
  |
3 |     let _ = lash::LashCore::standard().model_variant("low");
  |                                        ^^^^^^^^^^^^^ method not found in `LashCoreBuilder`

error[E0061]: this method takes 2 arguments but 1 argument was supplied
 --> tests/ui/model_selection_requires_variant.rs:7:21
  |
7 |     let _ = builder.model("model-only");
  |                     ^^^^^-------------- argument #2 of type `Option<String>` is missing
  |
note: method defined here
 --> src/turn.rs
  |
  |     pub fn model(mut self, model: impl Into<String>, variant: Option<String>) -> Self {
  |            ^^^^^
help: provide the argument
  |
7 |     let _ = builder.model("model-only", /* Option<String> */);
  |                                       ++++++++++++++++++++++
